@@ -3,6 +3,7 @@ package com.yahoo.vespa.model.application.validation.change;
 
 import com.yahoo.config.model.api.ConfigChangeAction;
 import com.yahoo.config.model.api.ServiceInfo;
+import com.yahoo.config.provision.ClusterSpec;
 import com.yahoo.vespa.model.VespaModel;
 import com.yahoo.config.application.api.ValidationOverrides;
 import com.yahoo.vespa.model.content.utils.ApplicationPackageBuilder;
@@ -11,15 +12,13 @@ import com.yahoo.vespa.model.content.utils.SchemaBuilder;
 import org.junit.Test;
 
 import java.time.Instant;
-import java.util.Arrays;
 import java.util.List;
 
 import static com.yahoo.vespa.model.application.validation.change.ConfigChangeTestUtils.assertEqualActions;
 import static com.yahoo.vespa.model.application.validation.change.ConfigChangeTestUtils.newRefeedAction;
 import static com.yahoo.vespa.model.application.validation.change.ConfigChangeTestUtils.newRestartAction;
 import static com.yahoo.vespa.model.application.validation.change.ConfigChangeTestUtils.normalizeServicesInActions;
-import static org.hamcrest.CoreMatchers.is;
-import static org.junit.Assert.assertThat;
+import static org.junit.Assert.assertTrue;
 
 public class IndexedSearchClusterChangeValidatorTest {
 
@@ -40,9 +39,9 @@ public class IndexedSearchClusterChangeValidatorTest {
 
         public static VespaModel newOneDocModel(String sdContent) {
             return new ApplicationPackageBuilder().
-                    addCluster(new ContentClusterBuilder().name("foo").docTypes("d1")).
-                                                                                              addSchemas(new SchemaBuilder().
-                            name("d1").content(sdContent).build()).buildCreator().create();
+                    addCluster(new ContentClusterBuilder().name("foo").docTypes("d1"))
+                                                  .addSchemas(new SchemaBuilder().name("d1").content(sdContent).build())
+                                                  .buildCreator().create();
         }
 
         public static Fixture newTwoDocFixture(String currentSd, String nextSd) {
@@ -51,11 +50,9 @@ public class IndexedSearchClusterChangeValidatorTest {
 
         public static VespaModel newTwoDocModel(String d1Content, String d2Content) {
             return new ApplicationPackageBuilder().
-                    addCluster(new ContentClusterBuilder().name("foo").docTypes("d1", "d2")).
-                                                                                                    addSchemas(new SchemaBuilder().
-                            name("d1").content(d1Content).build()).
-                                                                          addSchemas(new SchemaBuilder().
-                            name("d2").content(d2Content).build()).
+                    addCluster(new ContentClusterBuilder().name("foo").docTypes("d1", "d2"))
+                                                  .addSchemas(new SchemaBuilder().name("d1").content(d1Content).build())
+                                                  .addSchemas(new SchemaBuilder().name("d2").content(d2Content).build()).
                     buildCreator().create();
         }
 
@@ -66,25 +63,23 @@ public class IndexedSearchClusterChangeValidatorTest {
         public static VespaModel newTwoClusterModel(String d1Content, String d2Content) {
             return new ApplicationPackageBuilder().
                     addCluster(new ContentClusterBuilder().name("foo").docTypes("d1")).
-                    addCluster(new ContentClusterBuilder().name("bar").docTypes("d2")).
-                                                                                              addSchemas(new SchemaBuilder().
-                            name("d1").content(d1Content).build()).
-                                                                          addSchemas(new SchemaBuilder().
-                            name("d2").content(d2Content).build()).
+                    addCluster(new ContentClusterBuilder().name("bar").docTypes("d2"))
+                                                  .addSchemas(new SchemaBuilder().name("d1").content(d1Content).build())
+                                                  .addSchemas(new SchemaBuilder().name("d2").content(d2Content).build()).
                     buildCreator().create();
         }
 
         private List<ConfigChangeAction> validate() {
             return normalizeServicesInActions(validator.validate(currentModel, nextModel,
-                    ValidationOverrides.empty, Instant.now()));
+                                                                 ValidationOverrides.empty, Instant.now()));
         }
 
         public void assertValidation() {
-            assertThat(validate().size(), is(0));
+            assertTrue(validate().isEmpty());
         }
 
         public void assertValidation(ConfigChangeAction exp) {
-            assertValidation(Arrays.asList(exp));
+            assertValidation(List.of(exp));
         }
 
         public void assertValidation(List<ConfigChangeAction> exp) {
@@ -97,31 +92,34 @@ public class IndexedSearchClusterChangeValidatorTest {
     static String ATTRIBUTE_CHANGE_MSG = "Field 'f1' changed: add attribute aspect";
     static String INT_FIELD = "field f1 type int { indexing: summary }";
     static String FIELD_TYPE_CHANGE_MSG = "Field 'f1' changed: data type: 'string' -> 'int'";
-    private static List<ServiceInfo> FOO_SERVICE = Arrays.asList(
+    private static final List<ServiceInfo> FOO_SERVICE = List.of(
             new ServiceInfo("searchnode", "null", null, null, "foo/search/cluster.foo/0", "null"));
-    private static List<ServiceInfo> BAR_SERVICE = Arrays.asList(
+    private static final List<ServiceInfo> BAR_SERVICE = List.of(
             new ServiceInfo("searchnode2", "null", null, null, "bar/search/cluster.bar/0", "null"));
 
     @Test
     public void requireThatDocumentDatabaseChangeIsDiscovered() {
         Fixture.newOneDocFixture(STRING_FIELD, ATTRIBUTE_FIELD).
-                assertValidation(newRestartAction("Document type 'd1': " + ATTRIBUTE_CHANGE_MSG, FOO_SERVICE));
+                assertValidation(newRestartAction(ClusterSpec.Id.from("test"),
+                                                  "Document type 'd1': " + ATTRIBUTE_CHANGE_MSG, FOO_SERVICE));
     }
 
     @Test
     public void requireThatChangeInSeveralDocumentDatabasesAreDiscovered() {
         Fixture.newTwoDocFixture(STRING_FIELD, ATTRIBUTE_FIELD).
-                assertValidation(Arrays.asList(newRestartAction("Document type 'd1': "
-                                        + ATTRIBUTE_CHANGE_MSG, FOO_SERVICE),
-                        newRestartAction("Document type 'd2': " + ATTRIBUTE_CHANGE_MSG, FOO_SERVICE)));
+                assertValidation(List.of(newRestartAction(ClusterSpec.Id.from("test"),
+                                                          "Document type 'd1': " + ATTRIBUTE_CHANGE_MSG, FOO_SERVICE),
+                                         newRestartAction(ClusterSpec.Id.from("test"),
+                                                          "Document type 'd2': " + ATTRIBUTE_CHANGE_MSG, FOO_SERVICE)));
     }
 
     @Test
     public void requireThatChangeInSeveralContentClustersAreDiscovered() {
         Fixture.newTwoClusterFixture(STRING_FIELD, ATTRIBUTE_FIELD).
-                assertValidation(Arrays.asList(newRestartAction("Document type 'd1': "
-                                + ATTRIBUTE_CHANGE_MSG, FOO_SERVICE),
-                        newRestartAction("Document type 'd2': " + ATTRIBUTE_CHANGE_MSG, BAR_SERVICE)));
+                assertValidation(List.of(newRestartAction(ClusterSpec.Id.from("test"),
+                                                          "Document type 'd1': " + ATTRIBUTE_CHANGE_MSG, FOO_SERVICE),
+                                         newRestartAction(ClusterSpec.Id.from("test"),
+                                                          "Document type 'd2': " + ATTRIBUTE_CHANGE_MSG, BAR_SERVICE)));
     }
 
     @Test
@@ -147,9 +145,10 @@ public class IndexedSearchClusterChangeValidatorTest {
     @Test
     public void requireThatChangingFieldTypeIsDiscovered() {
         Fixture f = Fixture.newOneDocFixture(STRING_FIELD, INT_FIELD);
-        f.assertValidation(Arrays.asList(newRefeedAction("field-type-change",
-                                                        ValidationOverrides.empty,
-                                                         "Document type 'd1': " + FIELD_TYPE_CHANGE_MSG, FOO_SERVICE, "d1", Instant.now())));
+        f.assertValidation(List.of(newRefeedAction(ClusterSpec.Id.from("test"),
+                                                   "field-type-change",
+                                                   ValidationOverrides.empty,
+                                                   "Document type 'd1': " + FIELD_TYPE_CHANGE_MSG, FOO_SERVICE, "d1", Instant.now())));
     }
 
 }
